# WatcheRobot_python_sdk

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
docs/: display-text.md  hardware-testing.md  protocol-v1.md  releasing.md  resources.md  troubleshooting.md
examples/: README.md  capture_photo.py  display_text.py  hardware_smoke.py  hello_robot.py  play_audio_file.py  quickstart.py  record_microphone.py
src/watcherobot/: __init__.py  audio.py  errors.py  inputs.py  job.py  media.py  protocol.py  robot.py  transport.py
src/watcherobot/_internal/: __init__.py  audio_status.py
tests/: __init__.py  test_api.py  test_audio.py  test_discovery.py  test_documentation.py  test_examples.py  test_gateway.py  test_hardware_smoke.py  test_inputs.py  test_job.py  test_lan_binding.py  test_media.py  test_protocol.py  test_release.py
tests/fakes/: __init__.py  robot.py
tests/tools/: test_check_release_version.py  test_hardware_smoke.py
tools/: check_release_version.py  hardware_smoke.py
