[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "watcherobot"
version = "0.1.0"
description = "Synchronous Python SDK for controlling WatcheRobot on a local network"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Orulink AI"}]
dependencies = ["websockets>=12,<16"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/orulink-ai/WatcheRobot_python_sdk"
Repository = "https://github.com/orulink-ai/WatcheRobot_python_sdk"
Documentation = "https://github.com/orulink-ai/WatcheRobot_python_sdk#readme"
Issues = "https://github.com/orulink-ai/WatcheRobot_python_sdk/issues"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/watcherobot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
